// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post-document-public-access should add public access for a valid document using the post tool 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`post-document-public-access should add public access for a valid document using the post tool 2`] = `
{
  "errorDocument": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
  "groups": [
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "_Test PostPublicAccess MemberGroup",
    },
  ],
  "loginDocument": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
  "members": [],
}
`;

exports[`post-document-public-access should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
